fix: use npm to install pnpm instead of corepack for Render.com

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: resume-pdf-service
     env: node
-    buildCommand: corepack enable && corepack prepare pnpm@latest --activate && pnpm install
+    buildCommand: npm install -g pnpm && pnpm install
     startCommand: pnpm start
     plan: free
     envVars:
